# ZORIA

./: .gitignore  .pre-commit-config.yaml  ANALISIS_PARSEO_COMUNICACION.md  CHANGELOG.md  CONTRIBUTING.md  DIAGNOSTICO_COMANDO_SWEEP.md  DIAGNOSTICO_COMPLETO.md  DIAGNOSTICO_SWEEP_TIMEOUT.md  DOCUMENTACION_OFICIAL.md  FIX_MODO_DC.md  FIX_SWEETALERT_ERROR.md  FIX_TIMEOUT_SWEEP.md  HALLAZGO_FIRMWARE_DISCREPANCIA.md  IDENTIFICACION_FORMATO.md  IMPLEMENTACION_DELAYS_NATIVOS.md  INDICE.md  LICENSE  MANIFEST.in  METODO_OPTIMIZADO.md  MODO_DC_RESISTANCE.md  PLAN_IMPLEMENTACION_COMPLETO.md  PROCEDIMIENTO_ACTUALIZACION_FIRMWARE.md  README.md  README_NEW.md  RESUMEN_EJECUTIVO_SOLUCION.md  RESUMEN_EJECUTIVO_TRABAJO_PENDIENTE.md  RUN_AND_CHECK_LOGS.sh  SOLUCION_SWEEP_TIMEOUT.md  TERMINAL_CLI_MEJORAS.md  TEST_RESULTS.md  VALIDACION_FINAL.md  ZOOM_FIX_README.md  app.py  backup_calibrations.py  benchmark_timing.py  calibration_backup_20260207_161950.txt  check_device_state.py  check_firmware_version.py  dashboard_complete.py  diagnostico_calibracion.sh  (+69 more)
.github/workflows/: ci.yml
.opencode/skills/: charts  coding-agent  docx  fullstack-dev  image-edit  image-generation  image-understand  pdf  ppt  skill-creator  skill-finder-cn  skill-vetter  ui-ux-pro-max  visual-design-foundations  web-reader  web-search  xlsx
.opencode/skills/zoria-sweep/: SKILL.md
.opencode/skills/zoria-verify/: SKILL.md
assets/css/: about.css  calibration-wizard.css  calibration.css  config.css  dashboard-responsive.css  documentation.css  mobile-nav.css  modal-connect.css  navigation.css  scichart-themes.css  sweep-controls.css  typography-scale.css  windows.css  zoria-tokens.css
assets/js/: draggable_windows.js  favicon_theme.js  i18n_client.js  i18n_fallback_es.js  keyboard_shortcuts.js  mermaid_init.js
config/: spa_config.ini
lib/: __init__.py  admx2001.py  calibration.py  calibration_parser.py  design_tokens.py  device_state.py  enums.py  exceptions.py  hw_timing_profile.py  i18n.py  levalib.py  rc_model.py  utils.py
pages/: __init__.py
pages/about/: __init__.py  about_page.py
pages/calibration/: __init__.py  calibration_page.py
pages/common/: __init__.py  bread_crumbs.py  dropdown_folder_aoi.py  floating_terminal_button.py  footer.py  language_picker.py  mobile_nav.py  sidebar.py  status_bar.py  terminal_component.py  terminal_dock.py
pages/config/: config_page.py
pages/dashboard/: __init__.py  dashboard_page.py
pages/documentation/: __init__.py  documentation_page.py  documentation_page_backup.py
pages/icons/: __init__.py  components.py  hero.py
pages/simulator/: __init__.py  components.py  impedance_calculator.py  simulator_page.py
pages/system/: __init__.py
simulador-rlc/: PROYECTO_COMPLETADO.md  README.md  app.py  requirements.txt  run.sh  server.py
simulador-rlc/assets/: init-datepicker.js
simulador-rlc/assets/css/: dash-table.css  layout-fixes.css  simulator-fixes.css
simulador-rlc/pages/: simulator_page.py  simulator_page.py.backup
simulador-rlc/pages/common/: footer.py  sidebar.py
(+10 files in other folders)
