[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "zoria"
version = "1.0.0"
description = "Web-Based Interactive Dashboard for Impedance Analysis and Circuit Characterization"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Mario Ricardo Montero", email = "mariomontero942@gmail.com"},
    {name = "Juan Carlos Alvarez"},
    {name = "Francisco J. Racedo N."},
]
keywords = [
    "impedance analysis",
    "lcr meter",
    "eval-admx2001",
    "electrochemical impedance spectroscopy",
    "circuit characterization",
    "data visualization",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "pyserial>=3.5",
    "dash>=2.0.0",
    "dash-bootstrap-components>=1.0.0",
    "plotly>=5.0.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "dash-svg>=0.0.8",
    "dash-spa>=0.2.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pylint>=2.17.0",
    "black>=23.7.0",
    "mypy>=1.4.0",
]

[project.urls]
Homepage = "https://github.com/mario1027/ZORIA"
Documentation = "https://github.com/mario1027/ZORIA#readme"
Repository = "https://github.com/mario1027/ZORIA"
Issues = "https://github.com/mario1027/ZORIA/issues"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0111",  # missing-docstring
    "R0903",  # too-few-public-methods
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=lib --cov=pages"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["lib", "pages"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
